@@ -44,6 +44,12 @@ data:extend({
     },
     {
         type = "custom-input",
+        name = "fp_confirm_gui",
+        key_sequence = "",
+        linked_game_control = "confirm-gui"
+    },
+    {
+        type = "custom-input",
         name = "fp_focus_searchfield",
         key_sequence = "",
         linked_game_control = "focus-search"
