@@ -11,6 +11,7 @@ Date: 00. 00. 0000
     - Combined the various machine dialogs (chooser, limits, modules, fuel) into one
     - Unified the interactions and appearance of modules for machines and beacons
     - Made the 'reset machine' action also set modules and beacons to their configured defaults if possible
+    - Pressing 'E' with an open dialog now tries to confirm instead of closing, mirroring vanilla behavior
     - Improved consistency and visual appeal of various tooltips
     - Removed the dedicated 'toggle recipe'-button and integrated its core functionality into the recipe button itself
     - Removed mod interactions with FNEI and WIIRUF, meaning only Recipe Book remains supported (with deeper integration than before)
